# Laboratorio-di-Programmazione

./: .gitignore  CMakeLists.txt  Conto.h  Data.h  Notifica.h  Observer.h  Subject.h  Transazione.h  Utente.h  header.h  main.cpp
test/: test-conto.cpp  test-data.cpp  test-elaborato.cpp  test-main.cpp  test-notifica.cpp  test-transazione.cpp  test-utente.cpp
